--- a/todo.org
+++ b/todo.org
@@ -2,14 +2,6 @@
 
 * To Do
 
-** TODO [#B] Installation instructions.
-
-*** Installation of the config may require to manually uncomment 'literate' module and run doom sync, create script for that?
-
-*** Explore using defcli! to install with the doom cli utilily.
-
-*** defcli! documentation is a bit out ouf date, another contributing opportunity?
-
 ** TODO https://github.com/dalanicolai/pdf-continuous-scroll-mode.el/blob/master/pdf-continuous-scroll-mode.el Look into this.
 
 ** TODO https://github.com/folke/splashcii THIS BUT IN ELISP.
@@ -23,38 +15,45 @@
 MEJORAR mis diary s-exp con ~let~. ~current-time~ y las funciones en =time-date.el=,
 Si esto no me convence, entonces:
 
- This package extends org-mode and org-agenda with support for defining recurring
- tasks and easily scheduling them.
+This package extends org-mode and org-agenda with support for defining recurring
+tasks and easily scheduling them.
 
- By adding some simple syntax to anywhere in the task heading you can control how
- often the task should recur. Examples:
+By adding some simple syntax to anywhere in the task heading you can control how
+often the task should recur. Examples:
 
-     |+2|: Recur every other day.
-     |+w|: Recur every week.
-     |1|: Recur on the first of every month.
-     |Thu|: Recur every Thursday.
-     |Sun,Sat|: Recur every Sunday and Saturday.*
-     |Wkdy|: Recur every weekday.*
+    |+2|: Recur every other day.
+    |+w|: Recur every week.
+    |1|: Recur on the first of every month.
+    |Thu|: Recur every Thursday.
+    |Sun,Sat|: Recur every Sunday and Saturday.*
+    |Wkdy|: Recur every weekday.*
 
- The syntax is the same as the one already used by org-schedule, with examples of
- additional syntax, provided by org-recur, marked by *.
+The syntax is the same as the one already used by org-schedule, with examples of
+additional syntax, provided by org-recur, marked by *.
 
- First, we declare the package.
+First, we declare the package.
 
- #+begin_src elisp :tangle packages.el
- (package! org-recur)
- #+end_src
+#+begin_src elisp :tangle packages.el
+(package! org-recur)
+#+end_src
 
- #+begin_src elisp
- (use-package! org-recur
-   :defer t)
- #+end_src
+#+begin_src elisp
+(use-package! org-recur
+  :defer t)
+#+end_src
 
 ** TODO file:config.org::*Mozc Document [[https://github.com/rzl24ozi/mozc-emacs-helper-module][インストール]] instructions, maybe create elisp script for it? Checkout the recipe in [[https://aur.archlinux.org/cgit/aur.git/tree/PKGBUILD?h=mozc][AUR]].
 
 If realiable, this could be added to the =japanese= module, as a =+mozc= flag.
 
-** TODO WAIT for HSLINER Use [[doom-docs:getting_started.org][doctor.el]] to detect if nvm is installed.
+** TODO WAIT for HSLINER to refactor cli!
+
+*** defcli! to auto install this configuration.
+
+Installation of the config may require to manually uncomment 'literate' module
+and run doom sync, create script for that?
+
+*** Use [[doom-docs:getting_started.org][doctor.el]] to detect if nvm is installed.
 
 Unfortunatly, this feature cannot be implemented because there is no support for
 it in doom emacs. However, I opened a [[https://github.com/hlissner/doom-emacs/issues/4190][issue]] in doom-emacs repo requesting this
