--- a/todo.org
+++ b/todo.org
@@ -2,11 +2,9 @@
 
 * To Do
 
-** TODO https://github.com/dalanicolai/pdf-continuous-scroll-mode.el/blob/master/pdf-continuous-scroll-mode.el Look into this.
-
 ** TODO https://github.com/folke/splashcii THIS BUT IN ELISP.
 
-** TODO Create a function to only display the battery IF there is one. [[file:~/.config/doom/config.org::*Modeline][Modeline]]
+** TODO WAIT Test display the battery IF there is one customization on desktop. Will have to test a work computer.
 
 ** TODO [#B] [[file:config.org::*Org]] https://github.com/m-cat/org-recur#time-of-day Utilizar esto para los schedule clases de japones.
 
