--- a/todo.org
+++ b/todo.org
@@ -85,6 +85,8 @@ Inside @nvm.el
 
 ** TODO [[https://bunpro.jp/api#getting-started][Look into the bunpro API]], excuse to use the 'rest' module.
 
+** TODO [#B] Add org-super-agenda and better divide my tasks headings..
+
 * References:
 
 + [[https://github.com/p3r7/awesome-elisp][awesome-lisp.]]
