Add `+peek` flag to lsp module.

--- a/config.org
+++ b/config.org
@@ -555,7 +555,7 @@ Which complement the [[https://www.gnu.org/software/emacs/refcards/pdf/dired-ref
        (eval +overlay)     ; run code, run (also, repls)
        ;;gist              ; interacting with github gists
        lookup              ; navigate your code and its documentation
-       lsp
+       (lsp +peek)
        magit             ; a git porcelain for Emacs
        ;;make              ; run make tasks from Emacs
        ;;pass              ; password manager for nerds
